--- a/nwibuzz/index.html
+++ b/nwibuzz/index.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="fodsoft.css">
-		<script src="fodsoft.js" defer></script>
+		<link rel="stylesheet" href="https://resources.fodsoft.com/fodsoft.css">
+		<script src="https://resources.fodsoft.com/fodsoft.js" defer></script>
 		<title>Nwibuzz&trade; - FODSOFT&trade;</title>
 	</head>
 	<body class="light-theme">
 		<header class="light-theme-header">
-			<a href="fodsoft.html"> <img id="logo-principal" src="logo_fodsoft_a1.webp" class="logo-principal" draggable="false"> </a>
+			<a href="https://fodsoft.com"> <img id="logo-principal" src="https://resources.fodsoft.com/logo_fodsoft_a1.webp" class="logo-principal" draggable="false"> </a>
 			<nav>
-				<a href="fodsoft.html" data-idioma="inicio">Home</a>
-				<a href="fodsoft.html" data-idioma="proyectos">Software</a>
-				<a href="nsg.html" data-idioma="juegos">Games</a>
-				<a href="neofodere.html" data-idioma="info">About</a>
+				<a href="https://fodsoft.com" data-idioma="inicio">Home</a>
+				<a href="https://fodsoft.com" data-idioma="proyectos">Software</a>
+				<a href="https://nstudios-games.fodsoft.com" data-idioma="juegos">Games</a>
+				<a href="https://neofodere.fodsoft.com" data-idioma="info">About</a>
 			</nav>
 			<select id="selector-idioma">
 				<option value="en">English</option>
@@ -23,40 +23,40 @@
 			</select>
 		</header>
 		<main>
-		<img src="logo_nwibuzz.webp" class="logo-app">
+		<img src="https://resources.fodsoft.com/logo_nwibuzz.webp" class="logo-app">
 			<h2 class="titulo-soft" data-idioma="">All Nwibuzz™ versions</h2>
 			<div class="software-grid-app">
 				<div class="caratula-contenedor">
-					<img src="caratula_nwibuzz.webp" class="caratula">
+					<img src="https://resources.fodsoft.com/cover_nwibuzz.webp" class="caratula">
 					<p class="caratula-texto">Nwibuzz™</p>
 				</div>
 				<div class="caratula-contenedor">
-					<img src="caratula_nwibuzz_console.webp" class="caratula">
+					<img src="https://resources.fodsoft.com/cover_nwibuzz_console.webp" class="caratula">
 					<p class="caratula-texto">Nwibuzz™ Console</p>
 				</div>
 			</div>
-		<img src="logo_nwibuzz_aero.webp" class="logo-app">
+		<img src="https://resources.fodsoft.com/logo_nwibuzz_aero.webp" class="logo-app">
 			<h2 class="titulo-soft" data-idioma="">Nwibuzz™ AERO</h2>
 			<div class="software-grid-app">
 				<div class="caratula-contenedor">
-					<img src="caratula_nwibuzz_aero.webp" class="caratula">
+					<img src="https://resources.fodsoft.com/cover_nwibuzz_aero.webp" class="caratula">
 					<p class="caratula-texto">Nwibuzz™ AERO</p>
 				</div>
 			</div>
 		</main>	
 		<footer class="light-theme">
 			<div class="footer-centro">
-				<img src="logo_fodsoft_f1.webp" class="logo-footer">
+				<img src="https://resources.fodsoft.com/logo_fodsoft_b1.webp" class="logo-footer">
 				<p>© 2025 FODSOFT™. Néo Foderé de Frutos. All rights reserved.</p>
 			</div>
 			<div class="footer-enlaces">
 				<h2 data-idioma="enlaces_footer">Visit us</h2>
 				<a href="https://fodsoft.itch.io" target="_blank" rel="noopener noreferrer">
-				<img src="icono_itch.webp"class="invertir-color"></a>
+				<img src="https://resources.fodsoft.com/icono_itch.webp"class="invertir-color"></a>
 				<a href="https://www.instagram.com/fodsoft/" target="_blank" rel="noopener noreferrer">
-				<img src="icono_instagram.webp"class="invertir-color"></a>
+				<img src="https://resources.fodsoft.com/icono_instagram.webp"class="invertir-color"></a>
 				<a href="https://www.youtube.com/@fodsoft" target="_blank" rel="noopener noreferrer">
-				<img src="icono_yt.webp"class="invertir-color"></a>
+				<img src="https://resources.fodsoft.com/icono_youtube.webp"class="invertir-color"></a>
 			</div>
 		</footer>
 	</body>
