--- a/denfo/index.html
+++ b/denfo/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="icon" href="https://resources.fodsoft.com/denfo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="fodsoft.css">
 		<script src="fodsoft.js" defer></script>
@@ -9,7 +10,7 @@
 	</head>
 	<body class="light-theme">
 		<header class="light-theme-header">
-			<a href="fodsoft.html"> <img id="logo-principal" src="logo_fodsoft_a1.webp" class="logo-principal" draggable="false"> </a>
+			<a href="fodsoft.html"> <img id="logo-principal" src="https://resources.fodsoft.com/logo_fodsoft_a1.webp" class="logo-principal" draggable="false"> </a>
 			<nav>
 				<a href="fodsoft.html" data-idioma="inicio">Home</a>
 				<a href="fodsoft.html" data-idioma="proyectos">Software</a>
@@ -23,32 +24,32 @@
 			</select>
 		</header>
 		<main>
-		<img src="logo_denfo.webp" class="logo-app">
+		<img src="https://resources.fodsoft.com/logo_denfo.webp" class="logo-app">
 			<h2 class="titulo-soft" data-idioma="">All DENFO™ versions</h2>
 			<div class="software-grid-app">
 				<div class="caratula-contenedor">
-					<img src="caratula_denfo.webp" class="caratula">
+					<img src="https://resources.fodsoft.com/cover_denfo.webp" class="caratula">
 					<p class="caratula-texto">DENFO™</p>
 				</div>
 				<div class="caratula-contenedor">
-					<img src="caratula_denfo_ae.webp" class="caratula">
+					<img src="https://resources.fodsoft.com/cover_denfo_ae.webp" class="caratula">
 					<p class="caratula-texto">DENFO™ AE</p>
 				</div>
 			</div>
 		</main>	
 		<footer class="light-theme">
 			<div class="footer-centro">
-				<img src="logo_fodsoft_f1.webp" class="logo-footer">
+				<img src="https://resources.fodsoft.com/logo_fodsoft_b1.webp" class="logo-footer">
 				<p>© 2025 FODSOFT™. Néo Foderé de Frutos. All rights reserved.</p>
 			</div>
 			<div class="footer-enlaces">
 				<h2 data-idioma="enlaces_footer">Visit us</h2>
 				<a href="https://fodsoft.itch.io" target="_blank" rel="noopener noreferrer">
-				<img src="icono_itch.webp"class="invertir-color"></a>
+				<img src="https://resources.fodsoft.com/icono_itch.webp"class="invertir-color"></a>
 				<a href="https://www.instagram.com/fodsoft/" target="_blank" rel="noopener noreferrer">
-				<img src="icono_instagram.webp"class="invertir-color"></a>
+				<img src="https://resources.fodsoft.com/icono_instagram.webp"class="invertir-color"></a>
 				<a href="https://www.youtube.com/@fodsoft" target="_blank" rel="noopener noreferrer">
-				<img src="icono_yt.webp"class="invertir-color"></a>
+				<img src="https://resources.fodsoft.com/icono_youtube.webp"class="invertir-color"></a>
 			</div>
 		</footer>
 	</body>
