--- a/denfo/index.html
+++ b/denfo/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<link rel="icon" href="https://resources.fodsoft.com/denfo.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="fodsoft.css">
-		<script src="fodsoft.js" defer></script>
+		<link rel="stylesheet" href="https://resources.fodsoft.com/fodsoft.css">
+		<script src="https://resources.fodsoft.com/fodsoft.js" defer></script>
 		<title>DENFO&trade; - FODSOFT&trade;</title>
 	</head>
 	<body class="light-theme">
