--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body class="light-theme">
 		<header class="light-theme-header">
-			<a href="fodsoft.html"> <img id="logo-principal" src="https://resources.fodsoft.com/logo_fodsoft_a1.webp" class="logo-principal" draggable="false"> </a>
+			<a href="https://fodsoft.com"> <img id="logo-principal" src="https://resources.fodsoft.com/logo_fodsoft_a1.webp" class="logo-principal" draggable="false"> </a>
 			<nav>
 				<a href="https://fodsoft.com/" data-idioma="inicio">Home</a>
 				<a href="https://nstudios-games.fodsoft.com/" data-idioma="juegos">Games</a>
