--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<title>FODSOFT&trade;</title>
 		<link rel="icon" href="https://resources.fodsoft.com/fodsoft.ico">
 		<meta name="description" content="FODSOFT™ is a Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.">
 		<meta name="keywords" content="FODSOFT, NSTUDIOS GAMES, Néo Foderé, Néo Foderé de Frutos, Fodéré, Arenys de Munt, FodFru, DENFO, Nwibuzz, FVAX, FVAX Player">
@@ -9,7 +10,55 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://resources.fodsoft.com/fodsoft.css">
 		<script src="https://resources.fodsoft.com/fodsoft.js" defer></script>
-		<title>FODSOFT&trade;</title>
+		<script type="application/ld+json">
+		{
+			  "@context": "https://schema.org",
+			  "@type": "Organization",
+			  "name": "FODSOFT",
+			  "url": "https://fodsoft.com",
+			  "logo": "https://resources.fodsoft.com/logo_fodsoft_a1.webp",
+			  "sameAs": [
+			    "https://www.linkedin.com/in/neofodere/",
+			    "https://es.linkedin.com/company/fodsoft",
+			    "https://github.com/neofodere",
+			    "https://fodsoft.itch.io/",
+			    "https://fodsoft.fandom.com/wiki/FODSOFT_Wiki",
+			    "https://www.artstation.com/neofodere"
+			  ],
+			  "founder": {
+			    "@type": "Person",
+			    "name": "Néo Foderé de Frutos"
+			  },
+			  "description": "Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.",
+			  "foundingDate": "2025-02-22",
+			  "product": [
+			    {
+			      "@type": "SoftwareApplication",
+			      "name": "Nwibuzz",
+			      "description": "Nwibuzz™ is a window management software developed by Néo Foderé de Frutos under the brand FODSOFT™. It allows users to overlay windows, adjust opacity, reposition them, and disable interaction to enhance workflow and user experience.",
+			      "logo": "https://resources.fodsoft.com/logo_nwibuzz.webp"
+			    },
+			    {
+			      "@type": "SoftwareApplication",
+			      "name": "Nwibuzz AERO",
+			      "description": "Nwibuzz™ AERO is a special version of Nwibuzz™ designed for operating system customization developed by Néo Foderé de Frutos under the brand FODSOFT™.",
+			      "logo": "https://resources.fodsoft.com/logo_nwibuzz_aero.webp"
+			    },
+			    {
+			      "@type": "SoftwareApplication",
+			      "name": "DENFO",
+			      "description": "DENFO™ is a free, ad-free software by Néo Foderé de Frutos under the FODSOFT™ brand that provides hardware and software information from PCs and Android™ devices, including CPU, GPU, RAM, OS details, and driver versions.",
+			      "logo": "https://resources.fodsoft.com/logo_denfo.webp"
+			    },
+			    {
+			      "@type": "SoftwareApplication",
+			      "name": "FVAX Player",
+			      "description": "FVAX Player™ is a powerful, efficient multimedia player designed for the FVAX format developed by Néo Foderé de Frutos under the brand FODSOFT™.",
+			      "logo": "https://resources.fodsoft.com/logo_fvax_player.webp"
+		    	}
+			]
+		}
+		</script>
 	</head>
 	<body class="light-theme">
 		<header class="light-theme-header">
