--- a/index.html
+++ b/index.html
@@ -12,50 +12,53 @@
 		<script src="https://resources.fodsoft.com/fodsoft.js" defer></script>
 		<script type="application/ld+json">
 		{
-			  "@context": "https://schema.org",
-			  "@type": "Organization",
-			  "name": "FODSOFT",
-			  "url": "https://fodsoft.com",
-			  "logo": "https://resources.fodsoft.com/logo_fodsoft_a1.webp",
-			  "sameAs": [
-			    "https://www.linkedin.com/in/neofodere/",
-			    "https://es.linkedin.com/company/fodsoft",
-			    "https://github.com/neofodere",
-			    "https://fodsoft.itch.io/",
-			    "https://fodsoft.fandom.com/wiki/FODSOFT_Wiki",
-			    "https://www.artstation.com/neofodere"
-			  ],
-			  "founder": {
-			    "@type": "Person",
-			    "name": "Néo Foderé de Frutos"
-			  },
-			  "description": "Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.",
-			  "foundingDate": "2025-02-22",
-			  "product": [
-			    {
-			      "@type": "SoftwareApplication",
-			      "name": "Nwibuzz",
-			      "description": "Nwibuzz™ is a window management software developed by Néo Foderé de Frutos under the brand FODSOFT™. It allows users to overlay windows, adjust opacity, reposition them, and disable interaction to enhance workflow and user experience.",
-			      "logo": "https://resources.fodsoft.com/logo_nwibuzz.webp"
-			    },
-			    {
-			      "@type": "SoftwareApplication",
-			      "name": "Nwibuzz AERO",
-			      "description": "Nwibuzz™ AERO is a special version of Nwibuzz™ designed for operating system customization developed by Néo Foderé de Frutos under the brand FODSOFT™.",
-			      "logo": "https://resources.fodsoft.com/logo_nwibuzz_aero.webp"
-			    },
-			    {
-			      "@type": "SoftwareApplication",
-			      "name": "DENFO",
-			      "description": "DENFO™ is a free, ad-free software by Néo Foderé de Frutos under the FODSOFT™ brand that provides hardware and software information from PCs and Android™ devices, including CPU, GPU, RAM, OS details, and driver versions.",
-			      "logo": "https://resources.fodsoft.com/logo_denfo.webp"
-			    },
-			    {
-			      "@type": "SoftwareApplication",
-			      "name": "FVAX Player",
-			      "description": "FVAX Player™ is a powerful, efficient multimedia player designed for the FVAX format developed by Néo Foderé de Frutos under the brand FODSOFT™.",
-			      "logo": "https://resources.fodsoft.com/logo_fvax_player.webp"
-		    	}
+			"@context": "https://schema.org",
+			"@type": "Organization",
+			"name": "FODSOFT",
+			"url": "https://fodsoft.com",
+			"logo": "https://resources.fodsoft.com/logo_fodsoft_a1.webp",
+			"sameAs": [
+				"https://www.linkedin.com/in/neofodere/",
+				"https://es.linkedin.com/company/fodsoft",
+				"https://github.com/neofodere",
+				"https://fodsoft.itch.io/",
+				"https://fodsoft.fandom.com/wiki/FODSOFT_Wiki",
+				"https://www.artstation.com/neofodere"
+			],
+			"founder": {
+				"@type": "Person",
+				"name": "Néo Foderé de Frutos"
+			},
+			"description": "Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.",
+			"foundingDate": "2025-02-22",
+			"product": [
+				{
+					"@type": "SoftwareApplication",
+					"name": "Nwibuzz",
+					"url": "https://fodsoft.com/nwibuzz/",
+					"description": "Nwibuzz™ is a window management software developed by Néo Foderé de Frutos under the brand FODSOFT™. It allows users to overlay windows, adjust opacity, reposition them, and disable interaction to enhance workflow and user experience.",
+					"logo": "https://resources.fodsoft.com/logo_nwibuzz.webp"
+				},
+				{
+					"@type": "SoftwareApplication",
+					"name": "Nwibuzz AERO",
+					"url": "https://fodsoft.com/nwibuzz/",
+					"description": "Nwibuzz™ AERO is a special version of Nwibuzz™ designed for operating system customization developed by Néo Foderé de Frutos under the brand FODSOFT™.",
+					"logo": "https://resources.fodsoft.com/logo_nwibuzz_aero.webp"
+				},
+				{
+					"@type": "SoftwareApplication",
+					"name": "DENFO",
+					"url": "https://fodsoft.com/denfo/",
+					"description": "DENFO™ is a free, ad-free software by Néo Foderé de Frutos under the FODSOFT™ brand that provides hardware and software information from PCs and Android™ devices, including CPU, GPU, RAM, OS details, and driver versions.",
+					"logo": "https://resources.fodsoft.com/logo_denfo.webp"
+				},
+				{
+					"@type": "SoftwareApplication",
+					"name": "FVAX Player",
+					"description": "FVAX Player™ is a powerful, efficient multimedia player designed for the FVAX format developed by Néo Foderé de Frutos under the brand FODSOFT™.",
+					"logo": "https://resources.fodsoft.com/logo_fvax_player.webp"
+				}
 			]
 		}
 		</script>
