--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			"@type": "Organization",
 			"name": "FODSOFT",
 			"url": "https://fodsoft.com",
-			"logo": "https://resources.fodsoft.com/logo_fodsoft_a1.webp",
+			"logo": "https://resources.fodsoft.com/logo_fodsoft_b1.webp",
 			"sameAs": [
 				"https://www.linkedin.com/in/neofodere/",
 				"https://es.linkedin.com/company/fodsoft",
