--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>FODSOFT&trade;</title>
-		<link rel="icon" href="https://fodsoft.com/fodsoft.ico">
+		<link rel="icon" href="https://fodsoft.com/denfo/denfo.ico">
 		<meta name="description" content="FODSOFT™ is a Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.">
 		<meta name="keywords" content="FODSOFT, NSTUDIOS GAMES, Néo Foderé, Néo Foderé de Frutos, Fodéré, Arenys de Munt, FodFru, DENFO, Nwibuzz, FVAX, FVAX Player">
 		<meta name="author" content="Néo Foderé de Frutos">
