--- a/denfo/index.html
+++ b/denfo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="icon" href="https://fodsoft.com/denfo/favicon.ico">
+		<link rel="icon" href="/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://resources.fodsoft.com/fodsoft.css">
 		<script src="https://resources.fodsoft.com/fodsoft.js" defer></script>
