--- a/nwibuzz/index.html
+++ b/nwibuzz/index.html
@@ -6,23 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://resources.fodsoft.com/fodsoft.css">
 		<script src="https://resources.fodsoft.com/fodsoft.js" defer></script>
+		<script src="https://resources.fodsoft.com/html.js" defer></script>
 		<title>Nwibuzz&trade; - FODSOFT&trade;</title>
 	</head>
 	<body class="light-theme">
-		<header class="light-theme-header">
-			<a href="https://fodsoft.com"> <img id="logo-principal" src="https://resources.fodsoft.com/logo_fodsoft_a1.webp" class="logo-principal" draggable="false"> </a>
-			<nav>
-				<a href="https://fodsoft.com" data-idioma="inicio">Home</a>
-				<a href="https://fodsoft.com" data-idioma="proyectos">Software</a>
-				<a href="https://nstudios-games.fodsoft.com" data-idioma="juegos">Games</a>
-				<a href="https://neofodere.fodsoft.com" data-idioma="info">About</a>
-			</nav>
-			<select id="selector-idioma">
-				<option value="en">English</option>
-				<option value="es">Español</option>
-				<option value="fr">Français</option>
-			</select>
-		</header>
+		<div id="header-fodsoft"></div>
 		<main>
 		<img src="https://resources.fodsoft.com/logo_nwibuzz.webp" class="logo-app">
 			<h2 class="titulo-soft" data-idioma="">All Nwibuzz™ versions</h2>
@@ -45,21 +33,7 @@
 				</div>
 			</div>
 		</main>	
-		<footer class="light-theme">
-			<div class="footer-centro">
-				<img src="https://resources.fodsoft.com/logo_fodsoft_b1.webp" class="logo-footer">
-				<p>© 2025 FODSOFT™. Néo Foderé de Frutos. All rights reserved.</p>
-			</div>
-			<div class="footer-enlaces">
-				<h2 data-idioma="enlaces_footer">Visit us</h2>
-				<a href="https://fodsoft.itch.io" target="_blank" rel="noopener noreferrer">
-				<img src="https://resources.fodsoft.com/icono_itch.webp"class="invertir-color"></a>
-				<a href="https://www.instagram.com/fodsoft/" target="_blank" rel="noopener noreferrer">
-				<img src="https://resources.fodsoft.com/icono_instagram.webp"class="invertir-color"></a>
-				<a href="https://www.youtube.com/@fodsoft" target="_blank" rel="noopener noreferrer">
-				<img src="https://resources.fodsoft.com/icono_youtube.webp"class="invertir-color"></a>
-			</div>
-		</footer>
+		<div id="footer-fodsoft"></div>
 	</body>
 </html>
 <!-- FODSOFT(TM), NSTUDIOS GAMES(TM). Neo Fodere de Frutos. All rights reserved -->
