--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
 				"https://fodsoft.fandom.com/wiki/FODSOFT_Wiki",
 				"https://www.artstation.com/neofodere"
 			],
-			"founder": {
-				"@type": "Person",
-				"name": "Néo Foderé de Frutos"
-			},
+			"founder": {"@type": "Person", "name": "Néo Foderé de Frutos"},
 			"description": "Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.",
 			"foundingDate": "2025-02-22",
-			"product": [
+			"product":
+			[
 				{
 					"@type": "SoftwareApplication",
 					"name": "Nwibuzz",
