--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
 			"name": "FODSOFT",
 			"url": "https://fodsoft.com",
 			"logo": "https://resources.fodsoft.com/logo_fodsoft_b1.webp",
-			"sameAs": [
-				"https://www.linkedin.com/in/neofodere/",
+			"sameAs":
+			[
 				"https://es.linkedin.com/company/fodsoft",
-				"https://github.com/neofodere",
-				"https://fodsoft.itch.io/",
-				"https://fodsoft.fandom.com/wiki/FODSOFT_Wiki",
-				"https://www.artstation.com/neofodere"
+				"https://fodsoft.itch.io/"
 			],
 			"founder": {"@type": "Person", "name": "Néo Foderé de Frutos"},
 			"description": "Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.",
