--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>FODSOFT&trade;</title>
 		<link rel="icon" href="/favicon.ico">
 		<meta name="description" content="FODSOFT™ is a Spanish studio specialized in creating software tools, founded by Néo Foderé de Frutos.">
-		<meta name="keywords" content="FODSOFT, NSTUDIOS GAMES, Néo Foderé, Néo Foderé de Frutos, Fodéré, Arenys de Munt, FodFru, DENFO, Nwibuzz, FVAX, FVAX Player">
+		<meta name="keywords" content="FODSOFT, NSTUDIOS GAMES, Néo Foderé, Néo Foderé de Frutos, Fodéré, FodFru, DENFO, Nwibuzz, FVAX, FVAX Player">
 		<meta name="author" content="Néo Foderé de Frutos">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://resources.fodsoft.com/fodsoft.css">
